<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp"
    tools:context="com.example.zsk.smb.LoginActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/Login_TextView_Title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/color_TitleBar"
        android:gravity="center_horizontal"
        android:paddingBottom="7sp"
        android:paddingTop="8sp"
        android:text="@string/Login_Title"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/login_avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/avatar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/login_id"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:paddingLeft="8dp"
        android:background="@color/colorLoginEditText"
        android:hint="@string/text_login_id"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:background="@color/colorLoginEditText"
        android:inputType="textPassword"
        android:hint="@string/text_login_password"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp">

        <CheckBox
            android:id="@+id/login_remember_password"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:text="@string/remember_password"/>
        <CheckBox
            android:id="@+id/login_auto_login"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:text="@string/auto_login"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape"
        android:text="@string/text_login_button"
        android:textColor="@color/colorLoginText"
        android:textSize="20dp" />

    <Button
        android:id="@+id/activity_login_button_zhuce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="快速注册"
        android:background="@android:color/transparent"
        android:layout_marginTop="40dp"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:textColor="#6495ed"/>
</LinearLayout>